test/invalid/fc36956_TypeChecking_Conditionals3/Rectangle.plume
/**
 * Rectangle.plume
 *
 * @author Carlos Mao de Ferro
 * @version $Id: Rectangle.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Rectangle extends GraphicObject is
     method override draw : () -> Boolean is
     	false
    
    method override resize : () -> Boolean is
    	false